--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(untitled)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(beautiful_primes main.cpp)
-add_executable(all_primes primes.cpp)
+add_executable(beautiful_primes main.cpp pretty_number.cpp)
+#add_executable(all_primes primes.cpp)
